--- a/style.css
+++ b/style.css
@@ -1,214 +1,89 @@
 @charset “utf-8”;
 /*CSS Document */
 
-body {
-  margin: 0;
-  font-family: arial, verdana, "sans-serif";
-  background-color: #e0e0e0;
-}
+body {margin: 0; font-family: arial, verdana, "sans-serif"; background-color: #fff;}
 
-.img-container {
-  min-height: 400px;
-  background-image: url(https://www.freewebheaders.com/wordpress/wp-content/gallery/dogs/cute-rhodesian-ridgeback-dog-and-kid-website-header.jpg);
-  background-repeat: no-repeat;
-  background-size: 1800px 400px;
-  background-position: center top;
-  /*padding: 40px; (If don't want to set min-height or some image content is there) */
-}
+a {color: #000;}
 
-h1 {
-  text-align: center;
-  letter-spacing: 5px;
-  padding: 10px 0 0 0;
-}
+.header {background-color: #fff; width: 100%; top: 0; position: fixed; z-index: 500;}
 
-h2 {
-  text-align: center;
-  letter-spacing: 5px;
-  padding-top: 80px;
-}
+.container {width: 100%;}
 
-h3 {
-  font-size: 0.8em;
-  font-weight: none;
-  padding-bottom: 10px;
-  letter-spacing: 3px;
-  text-transform: uppercase;
-}
+.header-img {display: table; width:100%; min-height: 530px; height: 100%; background-repeat:no-repeat; background-size:100%; text-align:center; background-position:center top; background-image:url('http://i66.tinypic.com/28btksk.png'); position: relative; margin-top: 135px; margin-bottom: -20px; background-color: #fff;}
 
-.img {float: left;
-clear: both;}
+.header-img-txt { position:absolute; top: 40%; left: 50%; width: 100px; display: table-cell; margin: 0; transform: translateX(-50%); width: 140px;}
 
-#menuBackground {
-  background: #2f3036;
-  width: 100%;
-  height: 50px;
-  text-align: center;
-}
+.button {font-weight: bold; letter-spacing: 5px; display: inline-block; padding: 20px; text-decoration: none; border: 1px solid black; background-color: #fff; opacity: 0.8; }
 
-#menuContainer {
-  text-align: center;
-}
+h1 {text-align: center; letter-spacing: 5px; padding: 3px 0 0 0;}
+h2 {text-align: center; letter-spacing: 5px; padding-top: 80px;}
+h3 {text-align: center; font-size: 0.8em; font-weight: none; padding-bottom: 30px; letter-spacing: 3px; text-transform: uppercase;}
+h4 {text-decoration: underline;}
 
+.anchor {padding-top: 170px;}
 
-/*Strip the ul of padding and list styling*/
+.img {float: left; border: 1px solid black; margin-right: 20px;}
 
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
+.clearfix {overflow: auto;}
 
+/******** Navigation Bar ********/
+#navBackground {background: #2f3036; width: 100%; height: 50px; text-align: center;}
+  #navContainer {text-align: center; width: 100%;}
 
-/*Create a horizontal list with spacing*/
+/******** Strip the ul of padding and list styling *********/
+  #navContainer ul {list-style-type: none; margin: 0; padding: 0;}
+    #navContainer li {display: inline-block; vertical-align: top; margin-right: 1px;}
+      #navContainer li a {display: block; padding: 0; height: 50px; min-width: 110px; text-align: center; line-height: 50px; color: #fff; background: #2f3036; text-decoration: none; font-size: 0.9em; text-transform: uppercase; font-weight: bold; letter-spacing: 2px;}
+        #navContainer li:hover a {background: #333; color: #FED700;}
 
-li {
-  display: inline-block;
-  vertical-align: top;
-  margin-right: 1px;
-}
-
-
-/*Style for menu links*/
-
-li a {
-  display: block;
-  min-width: 180px;
-  height: 50px;
-  text-align: center;
-  line-height: 50px;
-  color: #fff;
-  background: #2f3036;
-  text-decoration: none;
-  font-size: 0.9em;
-  text-transform: uppercase;
-  font-weight: bold;
-  letter-spacing: 2px;
-}
-
-
-/*Hover state for top level links*/
-
-li:hover a {
-  background: #333;
-  color: #FED700;
-}
-
-
-/*Style for dropdown links*/
-
-li:hover ul a {
-  background: #333;
-  color: #FED700;
-  height: 40px;
-  line-height: 40px
-}
-
-
-/*Hover state for dropdown links*/
-
-li:hover ul a:hover {
-  background: #19c589;
-  color: #fff
-}
-
-
-/*Hide dropdown links until they are needed*/
-
-li ul {
-  position: absolute;
-  display: none
-}
-
-
-/*Make dropdown links vertical*/
-
-li ul li {
-  display: block;
-}
-
-
-/*Prevent text wrapping*/
-
-li ul li a {
-  width: auto;
-  min-width: 100px;
-  padding: 0 20px
-}
-
-
-/*Display the dropdown on hover*/
-
-ul li a:hover + .hidden,
-.hidden:hover {
-  display: block
-}
-
+/********* Style for dropdown links *********/
+        #navContainer li:hover ul a {background: #333; color: #FED700; height: 40px; line-height: 40px}
+/********** Hover state for dropdown links **********/
+          #navContainer li:hover ul a:hover {background: #19c589; color: #fff}
+/********** Hide dropdown links until they are needed **********/
+      #navContainer li ul {position: absolute; display: none}
+/********** Make dropdown links vertical **********/
+        #navContainer li ul li {display: block;}
+/********** Prevent text wrapping **********/
+          #navContainer li ul li a {width: auto; min-width: 100px; padding: 0 20px}
+/********** Display the dropdown on hover **********/
+        #navContainer ul li a:hover + .hidden, .hidden:hover {display: block}
 
 /*Style 'show menu' label button and hide it by default*/
-
-.show-menu {
-  text-decoration: none;
-  color: #fff;
-  background: #19c589;
-  text-align: center;
-  padding: 16px 0;
-  display: none;
-  width: 100%!important
-}
-
+.show-menu {text-decoration: none; color: #fff; background: #2f3036; text-align: center; padding: 16px 0; display: none; margin-bottom: 1px;width: 100%!important;}
 
 /*Hide checkbox*/
-
-input[type=checkbox] {
-  display: none
-}
-
-
+input[type=checkbox] {display: none}
 /*Show menu when invisible checkbox is checked*/
-
-input[type=checkbox]:checked ~ #menu {
-  display: block;
-  margin: 0 auto
-}
-
+input[type=checkbox]:checked ~ #menu {display: block; margin: 0 auto}
 
 /*Responsive Styles*/
-
-@media screen and (max-width: 760px) {
+@media screen and (max-width: 560px) 
+{
   /*Make dropdown links appear inline*/
-  ul {
-    position: static;
-    display: none;
-    white-space: initial;
-  }
+#navContainer ul {
+    position: static; display: none; white-space: initial;}
   /*Create vertical spacing*/
-  li {
-    margin-bottom: 1px
-  }
+  #navContainer li {margin-bottom: 1px}
   /*Make all menu links full width*/
-  ul li,
-  li a {
-    width: 100%
-  }
+  #navContainer ul li,
+  #navContainer li a {width: 100%}
   /*Display 'show menu' link*/
-  .show-menu {
-    display: block
+  .show-menu {display: block}
+  .header-img {
+    max-height: 300px;
+    margin-bottom: -30px;
   }
 }
 
-#menuicon {
-    width: 35px;
-    height: 5px;
-    background-color: black;
-    margin: 6px 49px;
-}
+#menuicon {width: 35px; height: 3px; background-color: #fff; margin: 3px 55px;}
 
-.container1{
+.main-content-1{
     vertical-align: middle;
   background-color: #fff;
   width: 100%;
-  margin-top: -20px;
+  margin-top: 0;
+  position: relative;
 }
 ._text {
     color:#000;
@@ -216,13 +91,14 @@ input[type=checkbox]:checked ~ #menu {
   padding-bottom: 80px;
   line-height: 1.5em;
   width: 70%;
+  margin: auto;
 }
 
-.container2{
-  margin-top: -20px;
+.main-content-2{
+  margin-top: -19px;
     text-align: center;
     vertical-align: middle;
-  background-color: #eee;
+  background-color: #FFEC9C;
   width: 100%;
 }
 ._text2 {
@@ -230,14 +106,14 @@ input[type=checkbox]:checked ~ #menu {
     text-align: center;
     vertical-align: middle;
   line-height: 1.5em;
-  padding-bottom: 70px;
+  padding-bottom: 80px;
 }
 
-.container3{
-  margin-top: -20px;
+.main-content-3{
+  margin-top: -19px;
     text-align: center;
     vertical-align: middle;
-  background-color: #d3d3d3;
+  background-color: #FEE786;
   width: 100%;
 }
 ._text3 {
@@ -245,14 +121,14 @@ input[type=checkbox]:checked ~ #menu {
     text-align: center;
     vertical-align: middle;
   line-height: 1.5em;
-  padding-bottom: 70px;
+  padding-bottom: 80px;
 }
 
-.container4{
-  margin-top: -20px;
+.main-content-4{
+  margin-top: -19px;
     text-align: center;
     vertical-align: middle;
-  background-color: #bdbdbd;
+  background-color: #F5D07A;
   width: 100%;
 }
 ._text4 {
@@ -261,4 +137,37 @@ input[type=checkbox]:checked ~ #menu {
     vertical-align: middle;
   line-height: 1.5em;
   padding-bottom: 70px;
+}
+
+.main-content-5{
+  margin-top: -19px;
+    text-align: center;
+    vertical-align: middle;
+  background-color: #F1C063;
+  width: 100%;
+}
+._text5 {
+    color:#000;
+    text-align: center;
+    vertical-align: middle;
+  line-height: 1.5em;
+  padding-bottom: 70px;
+}
+
+.skills {
+  width: 10%;
+  background-color: ;
+  min-width: 250px;
+  padding: 20px 20px 0 20px;
+  margin: auto 10px;
+  display: inline-block;
+  font-size: 0.85em;
+}
+
+.examp {
+  width: 300px;
+  height: 350px;
+  display: inline-block;
+  font-size: 0.85em;
+  margin: 30px 40px 0 40px;
 }
