--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ input[type=checkbox] {display: none}
 input[type=checkbox]:checked ~ #menu {display: block; margin: 0 auto}
 
 /*Responsive Styles*/
-@media screen and (max-width: 560px) 
+@media screen and (max-width: 480px) 
 {
   /*Make dropdown links appear inline*/
 #navContainer ul {
@@ -72,8 +72,9 @@ input[type=checkbox]:checked ~ #menu {display: block; margin: 0 auto}
   .show-menu {display: block}
   .header-img {
     max-height: 300px;
-    margin-bottom: -30px;
-  }
+    margin-bottom: -30px;}
+  .skills {width: 80%;}
+  .examp {width: 80%;}
 }
 
 #menuicon {width: 35px; height: 3px; background-color: #fff; margin: 3px 55px;}
