--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ a {color: #000;}
 
 .container {width: 100%;}
 
-.header-img {display: table; width:100%; min-height: 530px; height: 100%; background-repeat:no-repeat; background-size:100%; text-align:center; background-position:center top; background-image:url('http://i66.tinypic.com/28btksk.png'); position: relative; margin-top: 135px; margin-bottom: -20px; background-color: #fff;}
+.header-img {display: table; width:100%; min-height: 530px; height: auto; background-repeat:no-repeat; background-size:100%; text-align:center; background-position:center top; background-image:url('http://i66.tinypic.com/28btksk.png'); position: relative; margin-top: 135px; margin-bottom: -20px; background-color: #fff;}
 
 .header-img-txt { position:absolute; top: 40%; left: 50%; width: 100px; display: table-cell; margin: 0; transform: translateX(-50%); width: 140px;}
 
@@ -58,7 +58,7 @@ input[type=checkbox] {display: none}
 input[type=checkbox]:checked ~ #menu {display: block; margin: 0 auto}
 
 /*Responsive Styles*/
-@media screen and (max-width: 480px) 
+@media screen and (max-width: 500px) 
 {
   /*Make dropdown links appear inline*/
 #navContainer ul {
@@ -71,18 +71,10 @@ input[type=checkbox]:checked ~ #menu {display: block; margin: 0 auto}
   /*Display 'show menu' link*/
   .show-menu {display: block}
   .header-img {
-    max-height: 300px;
     margin-bottom: -30px;}
   .skills {width: 80%;}
   .examp {width: 80%;}
-}
-
-@media only screen and (max-width: 480px) {
-  .header-img {
-    max-height: 300px;
-    margin-bottom: -30px;}
-  .skills {width: 80%;}
-  .examp {width: 80%;}
+  .main-content-1 {margin-top: -30px;}
 }
 
 #menuicon {width: 35px; height: 3px; background-color: #fff; margin: 3px 55px;}
