--- a/style.css
+++ b/style.css
@@ -71,10 +71,10 @@ input[type=checkbox]:checked ~ #menu {display: block; margin: 0 auto}
   /*Display 'show menu' link*/
   .show-menu {display: block}
   .header-img {
-    margin-bottom: -30px;}
+    height: auto;
+    margin-bottom: -100px;}
   .skills {width: 80%;}
   .examp {width: 80%;}
-  .main-content-1 {margin-top: -30px;}
 }
 
 #menuicon {width: 35px; height: 3px; background-color: #fff; margin: 3px 55px;}
