--- a/style.css
+++ b/style.css
@@ -71,8 +71,9 @@ input[type=checkbox]:checked ~ #menu {display: block; margin: 0 auto}
   /*Display 'show menu' link*/
   .show-menu {display: block}
   .header-img {
-    height: auto;
-    margin-bottom: -100px;}
+    margin-bottom: -160px;
+    max-height: 500px;
+  }
   .header-img-txt {position:absolute; top: 40%; left: 50%; margin: 0; transform: translateX(-50%);}
   .skills {width: 80%;}
   .examp {width: 80%;}
@@ -167,8 +168,7 @@ input[type=checkbox]:checked ~ #menu {display: block; margin: 0 auto}
 }
 
 .examp {
-  width: 300px;
-  height: 350px;
+  width: 25%;
   display: inline-block;
   font-size: 0.85em;
   margin: 30px 40px 0 40px;
