--- a/style.css
+++ b/style.css
@@ -71,9 +71,11 @@ input[type=checkbox]:checked ~ #menu {display: block; margin: 0 auto}
   /*Display 'show menu' link*/
   .show-menu {display: block}
   .header-img {
+    width: 100%;
     margin-bottom: -160px;
-    max-height: 500px;
-  }
+    max-height: 200px;}
+  .header-img-txt {
+    top: 25%;}
   .header-img-txt {position:absolute; top: 40%; left: 50%; margin: 0; transform: translateX(-50%);}
   .skills {width: 80%;}
   .examp {width: 80%;}
@@ -169,6 +171,7 @@ input[type=checkbox]:checked ~ #menu {display: block; margin: 0 auto}
 
 .examp {
   width: 25%;
+  min-width: 250px;
   display: inline-block;
   font-size: 0.85em;
   margin: 30px 40px 0 40px;
