--- a/style.css
+++ b/style.css
@@ -80,8 +80,8 @@ input[type=checkbox]:checked ~ #menu {display: block; margin: 0 auto}
       width: 80%;
   }
   .examp img{
-    width: 50%;
-    height: 50%;
+   max-width: 150px;
+    height: auto;
   }
 }
 
