--- a/style.css
+++ b/style.css
@@ -9,11 +9,28 @@ a {color: #000;}
 
 .container {width: 100%;}
 
-.header-img {display: table; width:100%; min-height: 750px; height: auto; background-repeat:no-repeat; background-size:100%; text-align:center; background-position:center top; background-image:url('http://i66.tinypic.com/28btksk.png'); position: relative; margin-top: 135px; margin-bottom: -20px; background-color: #fff;}
+.header-img {background-image: url("http://i66.tinypic.com/28btksk.png");  /*Replace link to the background image with your own image*/
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  margin-top: 130px;
+  height: 100vh;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
 
-.header-img-txt { position:absolute; top: 40%; left: 50%; width: 100px; display: table-cell; margin: 0; transform: translateX(-50%); width: 140px;}
-
-.button {font-weight: bold; letter-spacing: 5px; display: inline-block; padding: 20px; text-decoration: none; border: 1px solid black; background-color: #fff; opacity: 0.8; }
+.button {font-weight: bold; letter-spacing: 5px;
+  padding: 20px; text-decoration: none; border: 1px solid black; background-color: #fff; opacity: 0.8; }
 
 h1 {text-align: center; letter-spacing: 5px; padding: 3px 0 0 0;}
 h2 {text-align: center; letter-spacing: 5px; padding-top: 80px;}
@@ -70,18 +87,12 @@ input[type=checkbox]:checked ~ #menu {display: block; margin: 0 auto}
   #navContainer li a {width: 100%}
   /*Display 'show menu' link*/
   .show-menu {display: block}
-  .header-img {
-    width: 100%;
-    margin-bottom: -160px;
-    max-height: 200px;}
-  .header-img-txt {
-    top: 25%;}
     .skills {
       width: 80%;
   }
   .examp img{
-   max-width: 150px;
-    height: auto;
+    width: 80%;
+    height: 80%;
   }
 }
 
