--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ a {color: #000;}
   background-size: cover;
   background-position: center center;
   margin-top: 130px;
-  height: 100vh;
+  height: 80vh;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -91,8 +91,8 @@ input[type=checkbox]:checked ~ #menu {display: block; margin: 0 auto}
       width: 80%;
   }
   .examp img{
-    width: 80%;
-    height: 80%;
+    max-width: 150px;
+    height: auto;
   }
 }
 
