--- a/style.css
+++ b/style.css
@@ -95,6 +95,7 @@ input[type=checkbox]:checked ~ #menu {display: block; margin: 0 auto}
     max-width: 150px;
     height: auto;
   }
+  .header-img {height: 70vh;}
 }
 
 #menuicon {width: 35px; height: 3px; background-color: #fff; margin: 3px 55px;}
