--- a/style.css
+++ b/style.css
@@ -90,12 +90,12 @@ input[type=checkbox]:checked ~ #menu {display: block; margin: 0 auto}
     .skills {
       width: 80%;
   }
-  .container {width: 100%;}
+  .container {max-width: 100%;}
   .examp img{
     max-width: 150px;
     height: auto;
   }
-  .header-img {height: 70vh;}
+  .header-img {height: 65vh;}
 }
 
 #menuicon {width: 35px; height: 3px; background-color: #fff; margin: 3px 55px;}
