--- a/style.css
+++ b/style.css
@@ -195,6 +195,7 @@ and (max-width : 1024px)  {
 
 .skills {
   width: 15%;
+  min-width: 275px;
   background-color: ;
   padding: 20px 20px 0 20px;
   margin: auto 10px;
