--- a/style.css
+++ b/style.css
@@ -207,6 +207,7 @@ and (max-width : 1024px)  {
 .examp {
   width: 25%;
   max-width: 300px;
+  min-width: 300px;
   display: inline-block;
   font-size: 0.85em;
   margin: auto 30px;
