--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @charset “utf-8”;
 /*CSS Document */
 
-body {margin: 0; font-family: arial, verdana, "sans-serif"; background-color: #fff;}
+body {margin: 0; font-family: gill sans, "sans-serif"; background-color: #fff;}
 
 a {color: #000;}
 
@@ -29,7 +29,7 @@ a {color: #000;}
           align-items: center;
 }
 
-.button {font-weight: bold; letter-spacing: 5px;
+.button {font-weight: bold; letter-spacing: 5px; font-size: 1.5em;
   padding: 20px; text-decoration: none; border: 1px solid black; background-color: #fff; opacity: 0.8; }
 
 h1 {text-align: center; letter-spacing: 5px; padding: 3px 0 0 0;}
@@ -200,7 +200,7 @@ and (max-width : 1024px)  {
   padding: 20px 20px 0 20px;
   margin: auto 10px;
   display: inline-block;
-  font-size: 0.85em;
+  font-size: 0.9em;
   vertical-align: top;
 }
 
@@ -209,7 +209,7 @@ and (max-width : 1024px)  {
   max-width: 300px;
   min-width: 300px;
   display: inline-block;
-  font-size: 0.85em;
+  font-size: 0.9em;
   margin: auto 20px;
   padding: 10px 20px;
   vertical-align: top;
