--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @charset “utf-8”;
 /*CSS Document */
 
-body {margin: 0; font-family: gill sans, "sans-serif"; background-color: #fff;}
+body {margin: 0; font-family: gill sans, arial, "sans-serif"; background-color: #fff;}
 
 a {color: #000;}
 
@@ -210,7 +210,7 @@ and (max-width : 1024px)  {
   min-width: 300px;
   display: inline-block;
   font-size: 0.9em;
-  margin: auto 20px;
+  margin: auto 10px;
   padding: 10px 20px;
   vertical-align: top;
 }
