--- a/style.css
+++ b/style.css
@@ -29,8 +29,44 @@ a {color: #000;}
           align-items: center;
 }
 
-.button {font-weight: bold; letter-spacing: 5px; font-size: 1.5em;
-  padding: 20px; text-decoration: none; border: 3px solid black; background-color: #fff; opacity: 0.8; }
+.button {font-weight: bold; letter-spacing: 5px;
+  padding: 20px; text-decoration: none; border: 1px solid black; background-color: #fff; opacity: 0.8; font-size: 1.5em; display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px transparent;
+  position: relative;
+  -webkit-transition-property: color;
+  transition-property: color;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;}
+.button:before {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: #2098D1;
+  -webkit-transform: scaleY(0);
+  transform: scaleY(0);
+  -webkit-transform-origin: 50% 100%;
+  transform-origin: 50% 100%;
+  -webkit-transition-property: transform;
+  transition-property: transform;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-timing-function: ease-out;
+  transition-timing-function: ease-out;
+}
+.button:hover, .hvr-sweep-to-top:focus, .hvr-sweep-to-top:active {
+  color: white;
+}
+.button:hover:before, .hvr-sweep-to-top:focus:before, .hvr-sweep-to-top:active:before {
+  -webkit-transform: scaleY(1);
+  transform: scaleY(1);
+}
 
 h1 {text-align: center; letter-spacing: 5px; padding: 3px 0 0 0;}
 h2 {text-align: center; letter-spacing: 5px; padding-top: 80px;}
