--- a/style.css
+++ b/style.css
@@ -68,9 +68,9 @@ a {color: #000;}
   transform: scaleY(1);
 }
 
-h1 {text-align: center; letter-spacing: 5px; padding: 3px 0 0 0;}
-h2 {text-align: center; letter-spacing: 5px; padding-top: 80px;}
-h3 {text-align: center; font-size: 0.8em; font-weight: none; padding-bottom: 30px; letter-spacing: 3px; text-transform: uppercase;}
+h1 {font-size: 2.3em; text-align: center; letter-spacing: 5px; padding: 1px 0 0 0;}
+h2 {font-size: 2em; text-align: center; letter-spacing: 5px; padding-top: 80px; margin-bottom: -5px}
+h3 {font-size: 1.1em; text-align: center; font-weight: none; padding-bottom: 10px; letter-spacing: 3px; text-transform: uppercase;}
 h4 {text-decoration: underline;}
 
 .anchor {padding-top: 170px;}
@@ -153,7 +153,7 @@ and (max-width : 1024px)  {
 
 #menuicon {width: 35px; height: 3px; background-color: #fff; margin: 3px 55px;}
 
-.main-content-1{
+..main-content-1{
     vertical-align: middle;
   background-color: #fff;
   width: 100%;
@@ -166,6 +166,7 @@ and (max-width : 1024px)  {
   padding-bottom: 80px;
   line-height: 1.5em;
   width: 70%;
+  font-size: 1.2em;
   margin: auto;
 }
 
@@ -182,6 +183,7 @@ and (max-width : 1024px)  {
     vertical-align: middle;
   line-height: 1.5em;
   padding-bottom: 80px;
+  font-size: 1.2em;
 }
 
 .main-content-3{
@@ -197,6 +199,7 @@ and (max-width : 1024px)  {
     vertical-align: middle;
   line-height: 1.5em;
   padding-bottom: 80px;
+  font-size: 1.2em;
 }
 
 .main-content-4{
@@ -212,6 +215,7 @@ and (max-width : 1024px)  {
     vertical-align: middle;
   line-height: 1.5em;
   padding-bottom: 70px;
+  font-size: 1.2em;
 }
 
 .main-content-5{
@@ -231,7 +235,7 @@ and (max-width : 1024px)  {
 
 .skills {
   width: 15%;
-  min-width: 295px;
+  min-width: 290px;
   background-color: ;
   padding: 20px 20px 0 20px;
   margin: auto 10px;
@@ -242,11 +246,11 @@ and (max-width : 1024px)  {
 
 .examp {
   width: 25%;
-  max-width: 300px;
-  min-width: 300px;
+  min-width: 310px;
+  max-width: 310px;
   display: inline-block;
   font-size: 0.9em;
-  margin: auto 5px;
-  padding: 10px 20px;
+  margin: auto 10px;
+  padding: 10px 10px;
   vertical-align: top;
 }
