--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
 @charset “utf-8”;
 /*CSS Document */
 
-body {margin: 0; font-family: gill sans, arial, verdana, "sans-serif"; background-color: #fff;}
+@import url(https://fonts.googleapis.com/css?family=Open+Sans);
 
+body {margin: 0; font-family: 'open sans', "sans-serif"; background-color: #fff; font-size: 1em}
+strong {font-family: helvetica;}
 a {color: #000;}
 
 .header {background-color: #fff; width: 100%; top: 0; position: fixed; z-index: 500;}
@@ -68,10 +70,10 @@ a {color: #000;}
   transform: scaleY(1);
 }
 
-h1 {font-size: 2.3em; text-align: center; letter-spacing: 5px; padding: 1px 0 0 0;}
+h1 {font-family: gill sans; font-size: 2.3em; text-align: center; letter-spacing: 5px; padding: 1px 0 0 0;}
 h2 {font-size: 2em; text-align: center; letter-spacing: 5px; padding-top: 80px; margin-bottom: -5px}
 h3 {font-size: 1.1em; text-align: center; font-weight: none; padding-bottom: 10px; letter-spacing: 3px; text-transform: uppercase;}
-h4 {text-decoration: underline;}
+h4 {font-family: helvetica; text-decoration: underline;}
 
 .anchor {padding-top: 170px;}
 
@@ -153,7 +155,7 @@ and (max-width : 1024px)  {
 
 #menuicon {width: 35px; height: 3px; background-color: #fff; margin: 3px 55px;}
 
-..main-content-1{
+.main-content-1{
     vertical-align: middle;
   background-color: #fff;
   width: 100%;
@@ -164,14 +166,14 @@ and (max-width : 1024px)  {
     color:#000;
     vertical-align: middle;
   padding-bottom: 80px;
-  line-height: 1.5em;
+  line-height: 1.8em;
   width: 70%;
-  font-size: 1.2em;
+  font-size: 1em;
   margin: auto;
 }
 
 .main-content-2{
-  margin-top: -30px;
+  margin-top: -19px;
     text-align: center;
     vertical-align: middle;
   background-color: #FFEC9C;
@@ -183,7 +185,7 @@ and (max-width : 1024px)  {
     vertical-align: middle;
   line-height: 1.5em;
   padding-bottom: 80px;
-  font-size: 1.2em;
+  font-size: 1.=em;
 }
 
 .main-content-3{
@@ -199,7 +201,7 @@ and (max-width : 1024px)  {
     vertical-align: middle;
   line-height: 1.5em;
   padding-bottom: 80px;
-  font-size: 1.2em;
+  font-size: 1em;
 }
 
 .main-content-4{
