--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ a {color: #000;}
   transition-property: color;
   -webkit-transition-duration: 0.3s;
   transition-duration: 0.3s;}
+
 .button:before {
   content: "";
   position: absolute;
@@ -71,7 +72,7 @@ a {color: #000;}
 }
 
 h1 {font-family: gill sans; font-size: 2.3em; text-align: center; letter-spacing: 5px; padding: 1px 0 0 0;}
-h2 {font-size: 2em; text-align: center; letter-spacing: 5px; padding-top: 80px; margin-bottom: -5px}
+h2 {font-size: 2em; text-align: center; letter-spacing: 5px; padding-top: 80px; margin-bottom: 0}
 h3 {font-size: 1.1em; text-align: center; font-weight: none; padding-bottom: 10px; letter-spacing: 3px; text-transform: uppercase;}
 h4 {font-family: helvetica; text-decoration: underline;}
 
