--- a/style.css
+++ b/style.css
@@ -186,11 +186,11 @@ and (max-width : 1024px)  {
     vertical-align: middle;
   line-height: 1.5em;
   padding-bottom: 80px;
-  font-size: 1.=em;
+  font-size: 1em;
 }
 
 .main-content-3{
-  margin-top: -30px;
+  margin-top: -24px;
     text-align: center;
     vertical-align: middle;
   background-color: #FEE786;
