--- a/style.css
+++ b/style.css
@@ -129,6 +129,7 @@ input[type=checkbox]:checked ~ #menu {display: block; margin: 0 auto}
     .skills {
       width: 80%;
   }
+  ._text1 {font-size: 0.9em;}
   .container {max-width: 100%;}
   .examp img{
     max-width: 150px;
@@ -174,7 +175,7 @@ and (max-width : 1024px)  {
 }
 
 .main-content-2{
-  margin-top: -26px;
+  margin-top: -27px;
     text-align: center;
     vertical-align: middle;
   background-color: #FFEC9C;
@@ -190,7 +191,7 @@ and (max-width : 1024px)  {
 }
 
 .main-content-3{
-  margin-top: -26px;
+  margin-top: -27px;
     text-align: center;
     vertical-align: middle;
   background-color: #FEE786;
