--- a/style.css
+++ b/style.css
@@ -1,275 +1,76 @@
 @charset “utf-8”;
 /*CSS Document */
 
-@import url(https://fonts.googleapis.com/css?family=Open+Sans);
+@import url('https://fonts.googleapis.com/css?family=Lato|Archivo+Black|Nunito|Raleway');
 
-body {margin: 0; font-family: 'open sans', sans-serif; background-color: #fff; font-size: 1em}
-strong {font-family: helvetica;}
-a {color: #000;}
+body {margin: 0; color: #515151; line-height: 1.5em;}
 
-.header {background-color: #fff; width: 100%; top: 0; position: fixed; z-index: 500;}
+.welcome {font-size: 1.3em; line-height: 1.6em;}
 
-.container {width: 100%;}
+h1 {font-family: lato; line-height: 1.2em; letter-spacing: 1px; margin: 0; padding-top: 120px; font-size: 40px; font-weight: normal; text-align: center; color: #414141; display: inline-block; }
 
-.header-img {background-image: url("http://i66.tinypic.com/28btksk.png");  /*Replace link to the background image with your own image*/
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center center;
-  margin-top: 130px;
-  height: 85vh;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -webkit-justify-content: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
+h2 {font-family: lato; font-size: 1.5em; text-align: center; letter-spacing: 3px; margin: 0; color: #414141;}
 
-.button {font-weight: bold; letter-spacing: 5px;
-  padding: 20px; text-decoration: none; border: 3px solid black; background-color: #fff; opacity: 0.8; font-size: 1.5em; display: inline-block;
-  vertical-align: middle;
-  -webkit-transform: perspective(1px) translateZ(0);
-  transform: perspective(1px) translateZ(0);
-  box-shadow: 0 0 1px transparent;
-  position: relative;
-  -webkit-transition-property: color;
-  transition-property: color;
-  -webkit-transition-duration: 0.3s;
-  transition-duration: 0.3s;}
+h3 {text-align: center;}
 
-.button:before {
-  content: "";
-  position: absolute;
-  z-index: -1;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: #2098D1;
-  -webkit-transform: scaleY(0);
-  transform: scaleY(0);
-  -webkit-transform-origin: 50% 100%;
-  transform-origin: 50% 100%;
-  -webkit-transition-property: transform;
-  transition-property: transform;
-  -webkit-transition-duration: 0.3s;
-  transition-duration: 0.3s;
-  -webkit-transition-timing-function: ease-out;
-  transition-timing-function: ease-out;
-}
-.button:hover, .hvr-sweep-to-top:focus, .hvr-sweep-to-top:active {
-  color: white;
-}
-.button:hover:before, .hvr-sweep-to-top:focus:before, .hvr-sweep-to-top:active:before {
-  -webkit-transform: scaleY(1);
-  transform: scaleY(1);
-}
+.button {color: #fff; text-decoration: none; font-size: 16px; text-transform: uppercase; letter-spacing: 0.5px; background: #414141; padding: 8px 80px 8px 80px; border-radius: 25px;}
 
-h1 {font-family: gill sans; font-size: 2.3em; text-align: center; letter-spacing: 5px; padding: 1px 0 0 0;}
-h2 {font-size: 2em; text-align: center; letter-spacing: 5px; padding-top: 80px; margin-bottom: 0}
-h3 {font-size: 1.1em; text-align: center; font-weight: none; padding-bottom: 10px; letter-spacing: 3px; text-transform: uppercase;}
-h4 {font-family: helvetica; text-decoration: underline;}
+.button:hover {background-color: #999; color: #000; font-weight: bold;}
 
-.anchor {padding-top: 170px;}
+.container {margin:0;}
 
-.img {float: left; border: 1px solid black; margin-right: 20px;}
+.header {margin: 0; height: 220px; background-color: #f3efe3; background:url("http://i67.tinypic.com/2r7t25f.png") repeat-x}
 
-.clearfix {overflow: auto;}
+.banner {height: 190px; width: 100%; text-align: center; margin: auto;}
 
-/******** Navigation Bar ********/
-#navBackground {background: #2f3036; width: 100%; height: 50px; text-align: center;}
-  #navContainer {text-align: center; width: 100%;}
+.topnav {z-index: 1000; overflow: hidden; background-color: #888; text-align: center; background:url("http://i66.tinypic.com/e05sad.png") repeat-x;}
 
-/******** Strip the ul of padding and list styling *********/
-  #navContainer ul {list-style-type: none; margin: 0; padding: 0;}
-    #navContainer li {display: inline-block; vertical-align: top; margin-right: 1px;}
-      #navContainer li a {display: block; padding: 0; height: 50px; min-width: 150px; text-align: center; line-height: 50px; color: #fff; background: #2f3036; text-decoration: none; font-size: 0.9em; text-transform: uppercase; font-weight: bold; letter-spacing: 2px;}
-        #navContainer li:hover a {background: #333; color: #FED700;}
+.topnav a {font-family: nunito; display: inline-block; color: #f2f2f2; text-align: center; padding: 15px 30px; max-height: 18px; min-width: 70px; text-decoration: none; text-transform: uppercase; letter-spacing: 0.5px; font-size: 15px;}
 
-/********* Style for dropdown links *********/
-        #navContainer li:hover ul a {background: #333; color: #FED700; height: 40px; line-height: 40px}
-/********** Hover state for dropdown links **********/
-          #navContainer li:hover ul a:hover {background: #19c589; color: #fff}
-/********** Hide dropdown links until they are needed **********/
-      #navContainer li ul {position: absolute; display: none}
-/********** Make dropdown links vertical **********/
-        #navContainer li ul li {display: block;}
-/********** Prevent text wrapping **********/
-          #navContainer li ul li a {width: auto; min-width: 100px; padding: 0 20px}
-/********** Display the dropdown on hover **********/
-        #navContainer ul li a:hover + .hidden, .hidden:hover {display: block}
+.topnav a:hover {background-color: #eee;  color: black;}
 
-/*Style 'show menu' label button and hide it by default*/
-.show-menu {text-decoration: none; color: #fff; background: #2f3036; text-align: center; padding: 16px 0; display: none; margin-bottom: 1px;width: 100%!important;}
+.active {background-color: #63B7E6; color: white;}
 
-/*Hide checkbox*/
-input[type=checkbox] {display: none}
-/*Show menu when invisible checkbox is checked*/
-input[type=checkbox]:checked ~ #menu {display: block; margin: 0 auto}
+.topnav .icon {display: none;}
 
-/*Responsive Styles*/
-@media screen and (max-width: 767px) 
-{
-  /*Make dropdown links appear inline*/
-#navContainer ul {
-    position: static; display: none; white-space: initial;}
-  /*Create vertical spacing*/
-  #navContainer li {margin-bottom: 1px}
-  /*Make all menu links full width*/
-  #navContainer ul li,
-  #navContainer li a {width: 100%}
-  /*Display 'show menu' link*/
-  .show-menu {display: block}
-    .skills {
-      width: 80%;
+@media screen and (max-width: 900px) {
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a {float: left;}
+  .topnav a.icon {
+    float: right;
+    display: block;
   }
-  ._text1 {font-size: 0.9em;}
-  .container {max-width: 100%;}
-  .examp img{
-    max-width: 150px;
-    height: auto;
+   h1 {padding-top: 80px;}
+}
+
+@media screen and (max-width: 900px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
   }
-  .header-img {height: 65vh;}
+  .topnav.responsive a {
+    z-index: 1000;
+    float: none;
+    display: block;
+    text-align: left;
+    background-color: #666;
+  }
+  h1 {padding-bottom: 30px;}
+  .content { min-width: 95%;
+  padding-left: 10px;}
+  #examp{margin-left: 20px;
+    min-width: 320px;
+  }
 }
 
-@media only screen 
-and (min-width : 768px) 
-and (max-width : 1024px)  {
-   /*Make dropdown links appear inline*/
-#navContainer ul {
-    position: static; display: none; white-space: initial;}
-  /*Create vertical spacing*/
-  #navContainer li {margin-bottom: 1px}
-  /*Make all menu links full width*/
-  #navContainer ul li,
-  #navContainer li a {width: 100%}
-  /*Display 'show menu' link*/
-  .show-menu {display: block}
-  .skills {min-width: 270px}
-  .examp {width: 10%;}
-}
+.main{vertical-align: middle; width: 100%; margin-top: 50px; position: relative;}
 
-#menuicon {width: 35px; height: 3px; background-color: #fff; margin: 3px 55px;}
+.content {font-family: nunito; color:#333; vertical-align: middle; width: 60%; max-width: 1000px; padding-top: 15px; font-size: 1em; margin: auto;}
 
-.main-content-1{
-    vertical-align: middle;
-  background-color: #eee;
-  width: 100%;
-  margin-top: -27px;
-  position: relative;
-}
-._text {
-    color:#000;
-    vertical-align: middle;
-  padding-bottom: 80px;
-  line-height: 1.8em;
-  width: 70%;
-  font-size: 1em;
-  margin: auto;
-}
+#box-display {width: 30%; background: #eee; min-width: 320px; max-width: 320px; display: inline-block; font-size: 0.9em; margin-top: auto; text-align: center; margin-bottom: auto; margin-right: 10px; padding: 15px 0px; vertical-align: top;}
 
-.main-content-2{
-  margin-top: -27px;
-    text-align: center;
-    vertical-align: middle;
-  background-color: #FFEC9C;
-  width: 100%;
-}
-._text2 {
-    color:#000;
-    text-align: center;
-    vertical-align: middle;
-  line-height: 1.5em;
-  padding-bottom: 80px;
-  font-size: 1.=em;
-}
+.box-display-img {border: 1px solid #414141; opacity: 0.6}
 
-.main-content-3{
-  margin-top: -27px;
-    text-align: center;
-    vertical-align: middle;
-  background-color: #FEE786;
-  width: 100%;
-}
-._text3 {
-    color:#000;
-    text-align: center;
-    vertical-align: middle;
-  line-height: 1.5em;
-  padding-bottom: 80px;
-  font-size: 1em;
-}
-
-.main-content-4{
-  margin-top: -32px;
-    text-align: center;
-    vertical-align: middle;
-  background-color: #F5D07A;
-  width: 100%;
-}
-._text4 {
-    color:#000;
-    text-align: center;
-    vertical-align: middle;
-  line-height: 1.5em;
-  padding-bottom: 70px;
-  font-size: 1.2em;
-}
-
-.main-content-5{
-  margin-top: -27px;
-    text-align: center;
-    vertical-align: middle;
-  background-color: #F1C063;
-  width: 100%;
-}
-._text5 {
-    color:#000;
-    text-align: center;
-    vertical-align: middle;
-  line-height: 1.5em;
-  padding-bottom: 70px;
-}
-
-.main-content-6{
-  margin-top: -27px;
-    text-align: center;
-    vertical-align: middle;
-  background-color: #FFF;
-  width: 100%;
-}
-._text6 {
-    color:#000;
-    text-align: center;
-    vertical-align: middle;
-  line-height: 1.5em;
-  padding-bottom: 70px;
-}
-
-.skills {
-  width: 15%;
-  min-width: 290px;
-  background-color: ;
-  padding: 20px 20px 0 20px;
-  margin: auto 10px;
-  display: inline-block;
-  font-size: 0.9em;
-  vertical-align: top;
-}
-
-.examp {
-  width: 25%;
-  min-width: 310px;
-  max-width: 310px;
-  display: inline-block;
-  font-size: 0.9em;
-  margin: auto 10px;
-  padding: 10px 10px;
-  vertical-align: top;
-}
+.footer {height: 80px;background: #414141;}
