--- a/style.css
+++ b/style.css
@@ -64,6 +64,8 @@
     text-align: left;
     background-color: #666;
   }
+  .banner {font-size: 12px;
+  padding-top:  -100px;}
 }
 
 
@@ -73,7 +75,7 @@ body {margin: 0; color: #515151; line-height: 1.5em;}
 
 .welcome {font-size: 1.3em; line-height: 1.6em;}
 
-h1 {font-family: lato; line-height: 1.2em; letter-spacing: 1px; margin: 0; padding-top: 100px; font-size: 2.3em; font-weight: normal; text-align: center; color: #414141; display: inline-block;}
+h1 {font-family: lato; line-height: 1.2em; letter-spacing: 1px; margin: 0; padding-top: 115px; font-size: 2.5em; font-weight: normal; text-align: center; color: #414141; display: inline-block;}
 
 h2 {font-family: lato; font-size: 1.5em; text-align: center; letter-spacing: 3px; margin: 0; color: #414141;}
 
