--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ h3 {text-align: center;}
 
 .button:hover {background-color: #999; color: #000; font-weight: bold;}
 
-container {margin:0;}
+container {margin:0; width: 100%;}
 
 #row-1 {width: 100%; padding: 30px; font-family: nunito;}
 
