--- a/style.css
+++ b/style.css
@@ -68,6 +68,14 @@
   padding-top:  -100px;}
 }
 
+@media only screen 
+and (min-device-width : 768px) 
+and (max-device-width : 1024px)  {
+.child {
+    min-width: 100%; 
+  }
+}
+
 
 /********** OTHER *********/
 
