--- a/style.css
+++ b/style.css
@@ -70,12 +70,13 @@
 
 @media only screen 
 and (min-device-width : 768px) 
-and (max-device-width : 1024px)  {
+and (max-device-width : 1024px)  
+and (-webkit-min-device-pixel-ratio: 1){
 .child {
     min-width: 100%; 
   }
   #parent {
-    min-width: 100%;
+    min-width: 90%;
     display: -webkit-flex; /* NEW */
     display: flex;
     -webkit-flex-wrap: wrap; /* NEW */
