--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ body {margin: 0; color: #515151; line-height: 1.5em;}
 
 h1 {font-family: lato; line-height: 1.2em; letter-spacing: 1px; margin: 0; padding-top: 115px; font-size: 2.5em; font-weight: normal; text-align: center; color: #414141; display: inline-block;}
 
-h2 {font-family: lato; font-size: 1.5em; text-align: center; letter-spacing: 3px; margin: 0; color: #414141;}
+h2 {font-family: lato; font-size: 1.5em; line-height: 1.4em; text-align: center; letter-spacing: 3px; margin: 0; color: #414141;}
 
 h3 {text-align: center;}
 
