--- a/style.css
+++ b/style.css
@@ -77,10 +77,16 @@ and (-webkit-min-device-pixel-ratio: 1){
   }
   #parent {
     min-width: 90%;
-    display: -webkit-flex; /* NEW */
-    display: flex;
-    -webkit-flex-wrap: wrap; /* NEW */
-    flex-wrap: wrap;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-pack: justify;
+  -moz-box-pack: justify;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   }
 }
 
