--- a/style.css
+++ b/style.css
@@ -74,6 +74,7 @@ and (max-device-width : 1024px)
 and (-webkit-min-device-pixel-ratio: 1){
 .child {
     min-width: 100%; 
+  flex: 1 1 50%;
   }
   #parent {
     min-width: 65%;
