--- a/style.css
+++ b/style.css
@@ -77,6 +77,7 @@ and (-webkit-min-device-pixel-ratio: 1){
   flex: 1 0 auto;
   }
   #parent {
+    margin: 0 auto;
     min-width: 65%;
     height: auto;
   display: -webkit-box;
@@ -105,9 +106,9 @@ h2 {font-family: lato; font-size: 1.5em; line-height: 1.4em; text-align: center;
 
 h3 {text-align: center;}
 
-.button-container {width: 100%;}
+.button-container {width: 90%; text-align: center; margin: 0 auto; background: #414141; border-radius: 25px; padding: 10px 28px;}
 
-.button {color: #fff; text-decoration: none; font-size: 16px; text-transform: uppercase; letter-spacing: 0.5px; background: #414141; border-radius: 25px; padding: 15px 30px; width: 17vw; font-family: nunito;}
+.button {color: #fff; text-decoration: none; font-size: 16px; text-transform: uppercase; letter-spacing: 0.5px; font-family: nunito;}
 
 .button:hover {background-color: #999; color: #000; font-weight: bold;}
 
