--- a/style2.css
+++ b/style2.css
@@ -3,9 +3,7 @@
 
 @import url('https://fonts.googleapis.com/css?family=Lato|Archivo+Black|Nunito|Raleway');
 
-* {
-  box-sizing: border-box;  
-}
+* {box-sizing: border-box;  }
 
 .topnav {z-index: 1000; overflow: hidden; background-color: #888; text-align: center; background:url("http://i66.tinypic.com/e05sad.png") repeat-x; }
 
